force-app/main/default/objects/PartnerSync_License_Tier__mdt/PartnerSync_License_Tier__mdt.object-meta.xml
<CustomObject>
    <label>PartnerSync License Tier</label>
    <pluralLabel>PartnerSync License Tiers</pluralLabel>
</CustomObject>