force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether the license tier configuration is enabled.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>