force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Enable_AI__c.field-meta.xml
<CustomField>
    <fullName>Enable_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether AI functionality is available for the license tier.</description>
    <label>Enable AI</label>
    <type>Checkbox</type>
</CustomField>