force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Enable_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Enable_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Analytics</label>
    <type>Checkbox</type>
</CustomField>