force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Enable_Leads__c.field-meta.xml
<CustomField>
    <fullName>Enable_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Leads</label>
    <type>Checkbox</type>
</CustomField>