force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Enable_MDF__c.field-meta.xml
<CustomField>
    <fullName>Enable_MDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable MDF</label>
    <type>Checkbox</type>
</CustomField>