force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Enable_Webhooks__c.field-meta.xml
<CustomField>
    <fullName>Enable_Webhooks__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether webhooks are available for the license tier.</description>
    <label>Enable Webhooks</label>
    <type>Checkbox</type>
</CustomField>