force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Max_Deals_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Max_Deals_Per_Month__c</fullName>
    <description
  >Maximum number of deals allowed per month for the license tier.</description>
    <label>Max Deals Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>