force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Max_MDF_Requests__c.field-meta.xml
<CustomField>
    <fullName>Max_MDF_Requests__c</fullName>
    <label>Max MDF Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>