force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Max_Partners__c.field-meta.xml
<CustomField>
    <fullName>Max_Partners__c</fullName>
    <label>Max Partners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>