force-app/main/default/objects/PartnerSync_License_Tier__mdt/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <description
  >License tier name, such as Starter, Professional, or Enterprise.</description>
    <label>Tier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>